Fixed horizontal scrollbar.

--- a/styles/sass/_gallery.scss
+++ b/styles/sass/_gallery.scss
@@ -8,10 +8,10 @@
 
   .gallery-image {
     cursor: pointer;
-    height: 250px;
+    height: 300px;
     padding-left: 3%;
     background-size: cover;
-    width: 28.5%;
+    width: 28.75%;
     @include flexbox(row, flex-start, flex-end, wrap);
 
     &:hover {
@@ -48,7 +48,7 @@
     }
 
     &:nth-child(-n+3) {
-      margin-bottom: 17.5px;
+      margin-bottom: 12.5px;
     }
 
     &:nth-child(3n+2) {
