--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -63,6 +63,11 @@ img {
   max-width: 100%;
 }
 
+header,
+main {
+  max-width: 100%;
+}
+
 main {
   position: absolute;
   top: 100%;
