--- a/styles/sass/_queries.scss
+++ b/styles/sass/_queries.scss
@@ -6,14 +6,6 @@
   span {
     display: inline;
   }
-
-  .gallery-wrapper {
-    .gallery-image {
-      &:nth-child(-n+3) {
-        margin-bottom: 12.5px;
-      }
-    }
-  }
 }
 
 @media screen and (max-width: 1350px) {
