--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,10 @@ html, body {
 img {
   max-width: 100%; }
 
+header,
+main {
+  max-width: 100%; }
+
 main {
   position: absolute;
   top: 100%;
@@ -334,10 +338,10 @@ header {
   flex-wrap: wrap; }
   .gallery-wrapper .gallery-image {
     cursor: pointer;
-    height: 250px;
+    height: 300px;
     padding-left: 3%;
     background-size: cover;
-    width: 28.5%;
+    width: 28.75%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -373,7 +377,7 @@ header {
     .gallery-wrapper .gallery-image:nth-of-type(6) {
       background-image: url("../assets/images/kyiv.png"); }
     .gallery-wrapper .gallery-image:nth-child(-n+3) {
-      margin-bottom: 17.5px; }
+      margin-bottom: 12.5px; }
     .gallery-wrapper .gallery-image:nth-child(3n+2) {
       width: 41.5%; }
     .gallery-wrapper .gallery-image h3:before, .gallery-wrapper .gallery-image h3:after {
@@ -434,10 +438,7 @@ footer {
 ***/
 @media screen and (max-width: 1650px) {
   span {
-    display: inline; }
-
-  .gallery-wrapper .gallery-image:nth-child(-n+3) {
-    margin-bottom: 12.5px; } }
+    display: inline; } }
 @media screen and (max-width: 1350px) {
   header .header-block {
     width: 75%; }
